Bump gradle-pitest-plugin from 1.5.0 to 1.7.0
Bumps [gradle-pitest-plugin](https://github.com/szpak/gradle-pitest-plugin) from 1.5.0 to 1.7.0.
- [Release notes](https://github.com/szpak/gradle-pitest-plugin/releases)
- [Changelog](https://github.com/szpak/gradle-pitest-plugin/blob/master/CHANGELOG.md)
- [Commits](https://github.com/szpak/gradle-pitest-plugin/compare/release/1.5.0...release/1.7.0)

---
updated-dependencies:
- dependency-name: info.solidsoft.gradle.pitest:gradle-pitest-plugin
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>